try to fix some ui issue on mobile browser

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   display: grid;
   place-items: center;
   height: 100vh;
+  min-height: -webkit-fill-available;
   background-color: whitesmoke;
 }
 
